Add jvm opts to remove startup up warnings